<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_default"
    tools:context="douglas.android.com.demonintent.NovoUsuarioActivity">

    <EditText
        android:id="@+id/etUser"
        style="@style/baseEditText"
        android:hint="@string/hint_username" />

    <EditText
        android:id="@+id/etNome"
        style="@style/baseEditText"
        android:hint="@string/hint_nome" />

    <EditText
        android:id="@+id/etPass"
        style="@style/baseEditTextSenah"
        android:hint="@string/hint_senha" />

    <Button
        android:id="@+id/btnCriar"
        style="@style/baseButton"
        android:text="@string/criar_text" />

</LinearLayout>
