<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_default"
    tools:context="douglas.android.com.demonintent.LoginActivity"
    android:orientation="vertical">
    <EditText
       style="@style/baseEditText"
        android:hint="@string/hint_login"
        android:id="@+id/etLogin"/>
    <EditText
        style="@style/baseEditTextSenah"
        android:hint="@string/hint_senha"
        android:id="@+id/etSenha"/>
    <Button
        style="@style/baseButton"
        android:text="@string/login_text"
        android:id="@+id/btnConectar"/>
    <TextView
        style="@style/baseTextViewCriar"
        android:text="@string/novo_user_text"
        android:id="@+id/tvNovoUsuario"
        />
</LinearLayout>
